# eg-xc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: debug.yaml  md17.yaml  md17_mgga.yaml
doc/: density_features.md  padding.md  references.md
scripts/: main.py
src/egxc/: structures.py
src/egxc/dataloading/: __init__.py  base.py  dataloader.py  download.py  md17.py  oqdc_sets.py  qm9.py  threebpa.py  transform.py  utils.py
src/egxc/discretization/: README.md  __init__.py  basis.py
src/egxc/discretization/grids/: atomic.py  lebedev.py  quadrature.py
src/egxc/solver/: base.py  fock.py  linalg.py
src/egxc/solver/scf/: __init__.py  diis.py  scf.py
src/egxc/systems/: __init__.py  base.py  examples.py  preload.py
src/egxc/training/: early_stopping.py  ema.py  loss.py  optimizer.py  run.py
src/egxc/utils/: constants.py  logging.py  pad.py  typing.py
src/egxc/visualization/: interactive.py  utils.py
src/egxc/xc_energy/: __init__.py  features.py
src/egxc/xc_energy/functionals/: __init__.py  base.py
src/egxc/xc_energy/functionals/classical/: __init__.py  gga.py  hybrid.py  lda.py  lsda.py  mgga.py
src/egxc/xc_energy/functionals/learnable/: __init__.py  dick2021.py  egxc.py  (+1 more)
test/: test_basis.py  test_classical_functionals.py  test_dataloading.py  test_egxc_functional.py  test_encoder_and_decoder.py  test_energy.py  test_learnable_functionals.py  test_loss_fn.py  test_padding.py  test_quadrature.py  test_solver.py  test_structure.py  test_system.py  test_xc_potential.py
test/utils/: __init__.py  errors.py  pyscf_wrapper.py
(+6 files in other folders)
