[project]
name = "egxc"
version = "0.0.1"
authors = [
    { name = "eberhare", email = "my@mail.com" },
]
requires-python = ">= 3.11"
dependencies = [
    # General science & ML
    "numpy>=2.1.0",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.1",
    "pandas>=2.2.2",
    "einops>=0.8.0",
    # Plotting & visualization
    "matplotlib>=3.9.2",
    # seml
    "seml>=0.5.2",
    # Utilities
    "tqdm>=4.66.5",
    "rich>=13.8.0",
    "ipython>=8.27.0",
    "ipdb>=0.13.13",
    "jupyterlab>=4.2.5",
    "ipympl>=0.9.4",
    "ipywidgets>=8.1.5",
    # Development utilities
    "pre-commit>=3.8.0",
    "ruff>=0.6.3",
    "pytest>=8.3.2",
    "e3nn-jax>=0.20.7",
    "flax>=0.10.1",
    "periodictable>=1.7.1",
    "pyscf>=2.7.0",
    "jaxtyping>=0.2.36",
    "basis-set-exchange>=0.10",
    "plotly>=5.24.1",
    "pytest-xdist>=3.6.1",
    "openqdc>=0.1.2",
    "grain>=0.2.3",
    "wandb>=0.19.7",
    # Conditional JAX dependency
    "jax[cuda12]>=0.5.0; sys_platform == 'linux'",
    "jax>=0.5.0; sys_platform != 'linux'",
    "ase>=3.24.0",
]

license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
    "test",
]
